# DeepLab

./: .gitignore  DeepLab_model.ipynb  Dockerfile  LICENSE  README.md  deeplab.ipynb  pyproject.toml
docs/design_docs/: DeepLab.md
notebooks/: eda.ipynb  model_prototyping.ipynb
scripts/: donwload_data.py  evaluate.py  finetune.py  inference.py  train.py  train_model.py
src/data_pipeline/: augmentation.py  data_loader.py  downloader.py  preprocessing.py
src/data_pipeline/preprocessing/: data_preprocessing_old.py  data_processing.py  encoder.py
src/data_pipeline/sourcing/: downloader.py
src/deep_lab/: layers.py  model.py  model_gpt.py
src/deep_lab/layers/: aspp.py  backbone.py  base_layers.py  decoder.py
src/deep_lab/models/: model.py
src/deep_lab3/: data_processing.py  layers.py  model_gpt.py
src/training/: callback.py  learning_rate.py  metrics.py  trainer.py
src/utils/: data_organizer.py  downloader.py  network_inspection.py  plotting.py
tests/: data_visualization.py
